--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,15 @@ html{
 
     width: 100%;
     max-width: 100%;
-    overflow-x: hidden;
+    #over#flow-x: hidden;
 }
 
 body{
 	position: relative;
 	width: 100%;
 	max-width: 100%;
-    overflow-x: hidden;
-	height: 4000px;
+    #over#flow-x: hidden;
+	height: 3650px;
 	overflow-y: scroll;
 	font-family: 'Ubuntu';
 	background: #fff;
@@ -443,7 +443,7 @@ body{
 }
 .rect{
 	position: absolute;
-	width: 1430px;
+	width: 100%;
 	height: 171px;
 	left: 0px;
 	top: 3500px;
